--- a/CSS/navegador.css
+++ b/CSS/navegador.css
@@ -6,70 +6,74 @@
 body{
     font-family: 'Roboto', sans-serif;
     background-color: rgba(33, 33, 33, 0.98);
+
+}
+
+p{/*Para que haya un poco de scroll*/
+   color: rgba(33, 33, 33, 0.98);
 }
 
 .top-bar{/*fondo del nav*/
     background: var(--fondo);
     height: 56px;
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
 }
    
 .icono-menu{ /*Icono de 3 barras*/
     width: 40px;
     height: 40px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    padding-left: 15px;
     cursor: pointer;
+    margin: 10px 0;
 }
 
-.icono-menu__barra{/*Icono de 3 barras*/
-    background: var(--barra);
+span{
+    padding-left: 27px;
+    padding-top: 1px;
+}
+.icono-barra{
     width: 24px;
     height: 4px;
-    border-radius: 2.5px;
+    background-color: var(--barra);
+    border-radius: 5px;
+    margin-left: 25px;
     position: relative;
-    top: 7px;
-    
-    
-    
 }
 
-.icono-menu__barra:After{/*Icono de 3 barras*/
+.icono-barra::before{
     content: "";
-    position: absolute;
-    display: block;
     width: 24px;
     height: 4px;
-    border-radius: 2.5px;
-    background: var(--barra);
-    top: -.5rem;
+    background-color: var(--barra);
+    border-radius: 5px;
+    margin-left: 5px;
+    position: absolute;
+    top: -.55rem;
+    left: -5px;
 }
 
-.icono-menu__barra:before{/*Icono de 3 barras*/
+.icono-barra::after{
     content: "";
-    position: absolute;
-    display: block;
     width: 24px;
     height: 4px;
-    border-radius: 2.5px;
-    background: var(--barra);
-    top: .5rem;
-}
-
-.logo a{/*Logo de youtube*/
-     display: flex;
-     align-items: center;
-     cursor: pointer;
-     text-decoration: none;
+    background-color: var(--barra);
+    border-radius: 5px;
+    margin-left: 5px;
+    position: absolute;
+    top: .55rem;
+    left: -5px;
 }
 
 .logo-imagen{/*Logo de youtube*/
     width: 35px;
     height: 35px;
-    margin-left: 70px;
-    margin-top: -31px;
+    margin-left: 25px;
+
     
 }
 
@@ -77,7 +81,6 @@ body{
     color: #F3F3F3;
     text-transform: uppercase;
     font-weight: bold;
-    margin-top: -31px;
     padding-left: 4px;
     cursor: pointer;
 }
@@ -86,25 +89,21 @@ span{/*Ar de youtube*/
     color: #aaaaaa;
     font-size: x-small;
     position: absolute; 
-    top: 12px;
-    left: 182px;
+    top: 11px;
+    left: 158px;
 }
 
-.buscador-form{ /*caja flex de input en adelante*/
+.buscador{ /*caja flex de input en adelante*/
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
-    position: relative;
+    
+
 }
-
-
 
 input::placeholder{
     color: rgba(255, 255, 255, 0.88);
     font-size: 14px;
-    margin: 0 0 0 4px;
-    padding: 2px 3px;
-   
 }
 
 .buscador-input{/*Buscador*/ 
@@ -116,12 +115,10 @@ input::placeholder{
     border-bottom: 1px solid #454545;
     border-left: 1px solid #454545;
     border-right: none;
-    position: absolute;
-    top: -31px;
-    left: 25%;
-
+    color: #f9f9f9;
+    font-weight: 500;
+    padding: 5px;
 }
-
 
 .lupa{/*Lupa del buscador*/
     background-image: url(../Assets/Imagenes/search.webp);
@@ -136,10 +133,7 @@ input::placeholder{
     border-right: 1px solid #454545;
     border-left: none ;
     cursor: pointer; 
-    position: absolute;
-    top: -31px;
-    right: 587px;
-
+    
 }
 
 .lupa:hover{
@@ -156,11 +150,14 @@ input::placeholder{
     width: 32px;
     height: 32px;
     cursor: pointer;
-    position: absolute;
-    top: -31px;
-    right: 548px;
 }
 
+.derecha{ 
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    margin: 5px;
+}
 
 .camara{/*Camara del nav*/
     background-image: url(../Assets/Imagenes/camara-de-video3.webp);
@@ -171,9 +168,10 @@ input::placeholder{
     height: 24px;
     border: none;
     cursor: pointer;
-    position: absolute;
-    top: -30px;
-    right: 222px;
+    padding: 0 20px;
+    margin: 0 10px;
+   
+
 } 
 
 .cuadro{/*Cuadro del nav*/
@@ -185,9 +183,8 @@ input::placeholder{
     height: 23px;
     border: none;
     cursor: pointer;
-    position: absolute;
-    top: -28px;
-    right: 163px;
+    padding: 0 20px;
+    margin: 0 10px;
 }
 
 .campana{/*Campana del nav*/
@@ -199,9 +196,8 @@ input::placeholder{
     height: 24px;
     border: none;
     cursor: pointer;
-    position: absolute;
-    top: -30px;
-    right: 109px;
+    padding: 0 20px;
+    margin: 0 10px; 
 }
 
 .foto{/*Foto del nav*/
@@ -214,10 +210,35 @@ input::placeholder{
     border: none;
     border-radius: 20px;
     cursor: pointer;
-    position: absolute;
-    top: -34px;
-    right: 45px;
+    padding: 0 20px;
+    margin: 0 10px;
+} 
+
+
+.left-bar{
+    background-color: var(--fondo);
+    width: 73px;
+    position: fixed;
+    left: 0;
+    top: 56px;
+    bottom: 0;
 }
 
+.iconos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    margin:0 auto;
+    text-align: center;
+    font-size: 10px;
+    color: #909090;
+    cursor: pointer;
+  
+}
 
+.inicio, .tendencias, .suscripcion, .biblioteca{
+  margin: 10px;
+}
 
